--- a/SampleModule/view/adminhtml/layout/mastering_index_index.xml
+++ b/SampleModule/view/adminhtml/layout/mastering_index_index.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+        <title>Item List</title>
+    </head>
     <body>
         <referenceContainer name="content">
             <uiComponent name="mastering_items_grid"/>
