--- a/SampleModule/view/frontend/templates/hello.phtml
+++ b/SampleModule/view/frontend/templates/hello.phtml
@@ -3,6 +3,7 @@
  * @var \Mastering\SampleModule\Block\Hello $block
  */
 ?>
+<?php echo $block->getLabel(); ?>
 <?php foreach ($block->getItems() as $item) : ?>
     <p>
         <?php echo $item->getName(); ?> : <?php echo $item->getDescription(); ?>
